# AxumPOC

./: .gitignore  Cargo.toml  Dockerfile  configuration.yml  docker-compose.yml
configuration/: base.yaml  prod.yaml
entity/: Cargo.toml
entity/src/: lib.rs  subscriptions.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
migrations/2024-12-21-050358_create_subscribers/: down.sql  up.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/database/: models.rs
src/routes/: health_check.rs  mod.rs  subscribe.rs
tests/: health_check.rs  subscribe_check.rs
