[package]
name = "AxumPOC"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "AxumPOC"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
serde = { version = "1.0.216", features = ["derive"] }
diesel = { version = "2.2.6", default-features = false, features = ["postgres", "chrono", "r2d2", "uuid"] }
config = "0.15.4"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = "0.4.39"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
tracing = { version = "0.1.41", features = [ "log" ]}
tower-http = { version = "0.6.2", features = ["trace"] }
tracing-subscriber = { version = "0.3.19" , features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
anyhow = "1.0.95"